force-app/main/default/objects/Timeline__c/Timeline__c.object-meta.xml
<CustomObject>
    <label>Timeline</label>
    <nameField>
        <displayFormat>TIME-{0000}</displayFormat>
        <label>Timeline Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Timeline</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>