force-app/main/default/objects/Timeline__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Timeline</relationshipLabel>
    <relationshipName>Timeline</relationshipName>
    <type>Lookup</type>
</CustomField>