force-app/main/default/objects/Timeline__c/fields/Changed_Date__c.field-meta.xml
<CustomField>
    <fullName>Changed_Date__c</fullName>
    <label>Changed Date</label>
    <type>DateTime</type>
</CustomField>