force-app/main/default/objects/Timeline__c/fields/Duration_Days__c.field-meta.xml
<CustomField>
    <fullName>Duration_Days__c</fullName>
    <formula>Changed_Date__c -  Last_Modified_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duration (Days)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>