force-app/main/default/objects/Timeline__c/fields/Parent_Type__c.field-meta.xml
<CustomField>
    <fullName>Parent_Type__c</fullName>
    <label>Parent Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>